# dungeon-crawler-agent

./: .gitignore  Makefile  README.md  dump.rdb  pyproject.toml  requirements.txt
games/: dungeon.z8
src/: play.py
src/dungeon/Clockwork.inform/: Metadata.iFiction  Release.blurb  Settings.plist  Skein.skein  uuid.txt
src/dungeon/Clockwork.inform/Index/: Actions.html  Contents.html  Headings.xml  Kinds.html  Phrasebook.html  Rules.html  World.html
src/dungeon/Clockwork.inform/Index/Details/: 11_A.html  12_A.html  17_A.html  18_A.html  1_A.html  24_A.html  28_A.html  32_A.html  38_A.html  5_A.html  60_A.html  77_A.html  78_A.html  79_A.html  7_A.html  80_A.html  81_A.html  82_A.html
src/dungeon/Clockwork.inform/Source/: story.ni
