[project]
name = "dungeon-crawler-agent"
version = "0.1.0"
description = "Can your agent survive the dungeon?"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textworld",
    "langchain-openai",
    "langchain-community",
    "langgraph-checkpoint",
    "langchain-redis",
    "langgraph-checkpoint-redis",
    "langchain-core",
    "langchain-openai",
    "langchain-anthropic",
]
